Opened 16 years ago

Closed 16 years ago

#1601 closed bug (fixed)

Editing/Saving a file in Pe resulted in leftover bytes at end of file

Reported by: stippi Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Storage Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I was using Pe to edit a file in the Haiku source tree. Back in R5 to compile the tree, the file suddenly had bytes left over at the end. I don't know if the file got longer or shorter by my editing, but the left-over bytes were a duplicate of the true last section of the file. I don't know if this is a bug somewhere in the storage kit or possibly the interface kit. When I will try to reproduce this bug, I will confirm how the last section of the file looks before saving it. This should rule out an interface kit bug.

Change History (2)

comment:1 by axeld, 16 years ago

In case you manage to reproduce this, can you please try if you can still do so after hrev22858? At least I've spotted another bug in the file cache that might have been responsible for this (even though it shouldn't really have written beyond the file size).

comment:2 by stippi, 16 years ago

Resolution: fixed
Status: newclosed

I couldn't reproduce it before updating my revision. If you fixed a bug which could have been the cause, let's just close this bug for now, we can always re-open it if we ever see it again.

Note: See TracTickets for help on using tickets.